Fix right shift not being highlighted

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -53,7 +53,7 @@
   border-bottom: 7px solid brown; 
 }
 
-key.pinky-right {
+.key.pinky-right {
   border: 2px solid lightcoral;
   border-bottom: 7px solid lightcoral; 
 }
